[gd_scene load_steps=2 format=3 uid="uid://b38hn31i1vg4d"]

[ext_resource type="Script" path="res://Multiplayer.gd" id="5_fivu0"]

[node name="Game" type="Node"]

[node name="Multiplayer" type="Node" parent="."]
script = ExtResource("5_fivu0")

[node name="UI" type="CanvasLayer" parent="Multiplayer"]

[node name="GameHud" type="PanelContainer" parent="Multiplayer/UI"]
offset_right = 61.0
offset_bottom = 23.0

[node name="VBoxContainer" type="VBoxContainer" parent="Multiplayer/UI/GameHud"]
layout_mode = 2

[node name="Label" type="Label" parent="Multiplayer/UI/GameHud/VBoxContainer"]
modulate = Color(0.75, 0.75, 0.75, 1)
layout_mode = 2
text = "Players:"
horizontal_alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="Multiplayer/UI/GameHud/VBoxContainer"]
layout_mode = 2

[node name="MultiplayerOptions" type="VBoxContainer" parent="Multiplayer/UI"]
offset_left = 172.0
offset_top = 22.0
offset_right = 844.0
offset_bottom = 467.0
alignment = 1

[node name="Hosting" type="HBoxContainer" parent="Multiplayer/UI/MultiplayerOptions"]
layout_mode = 2
alignment = 1

[node name="Host" type="Button" parent="Multiplayer/UI/MultiplayerOptions/Hosting"]
layout_mode = 2
text = "Host new game"

[node name="Joining" type="HBoxContainer" parent="Multiplayer/UI/MultiplayerOptions"]
layout_mode = 2
alignment = 1

[node name="Remote" type="LineEdit" parent="Multiplayer/UI/MultiplayerOptions/Joining"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "localhost"
placeholder_text = "localhost"
max_length = 15
expand_to_text_length = true
clear_button_enabled = true
caret_blink = true

[node name="Connect" type="Button" parent="Multiplayer/UI/MultiplayerOptions/Joining"]
layout_mode = 2
text = "Connect to existing game on IP"

[node name="Starting" type="HBoxContainer" parent="Multiplayer/UI/MultiplayerOptions"]
layout_mode = 2
alignment = 1

[node name="PlayerName" type="LineEdit" parent="Multiplayer/UI/MultiplayerOptions/Starting"]
clip_contents = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
placeholder_text = "Write your name"
max_length = 16
expand_to_text_length = true
clear_button_enabled = true
caret_blink = true

[node name="StartGame" type="Button" parent="Multiplayer/UI/MultiplayerOptions/Starting"]
layout_mode = 2
text = "Start Game"

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="Multiplayer"]
_spawnable_scenes = PackedStringArray("res://players/LocalPlayer.tscn")
spawn_path = NodePath("../Players")

[node name="Players" type="Node" parent="Multiplayer"]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Dungeon.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="Multiplayer/UI/MultiplayerOptions/Hosting/Host" to="Multiplayer" method="_on_host_pressed"]
[connection signal="pressed" from="Multiplayer/UI/MultiplayerOptions/Joining/Connect" to="Multiplayer" method="_on_connect_pressed"]
[connection signal="pressed" from="Multiplayer/UI/MultiplayerOptions/Starting/StartGame" to="Multiplayer" method="_on_start_game_pressed"]
